--- a/cicd/pipelines/kubernetes-ingress/Jenkinsfile
+++ b/cicd/pipelines/kubernetes-ingress/Jenkinsfile
@@ -69,16 +69,16 @@ node('dind') {
         def master_found = ""
         while(master_found == "") {
             echo "Checking page $page_num"
-            master_found = sh returnStdout: true, script: "wget -q https://hub.docker.com/v2/repositories/splicemachine/kubernetes-ingress/tags?page=$page_num -O - | jq '.' | grep 'name' | grep '2\.0\.11'"
+            master_found = sh returnStdout: true, script: "wget -q https://hub.docker.com/v2/repositories/splicemachine/kubernetes-ingress/tags?page=$page_num -O - | jq '.' | grep 'name' | grep '2.0.11'"
             if (master_found == "") {
                 page_num++
             } else {
                 echo "Master image found on page $page_num"
             }
         }
-        existing_version_major = sh returnStdout: true, script: "wget -q https://hub.docker.com/v2/repositories/splicemachine/kubernetes-ingress/tags\?page\=$page_num -O - | jq '.' | grep 'name' | grep '2\.0\.11' | sed 's/2.0.11_//' | cut -d '.' -f1 | sed 's/\"//g' | sed 's/,//g' | head -n 1 | cut -d ' ' -f8 | tr -d '\n'"
-        existing_version_minor = sh returnStdout: true, script: "wget -q https://hub.docker.com/v2/repositories/splicemachine/kubernetes-ingress/tags\?page\=$page_num -O - | jq '.' | grep 'name' | grep '2\.0\.11' | sed 's/2.0.11_//' | cut -d '.' -f2 | sed 's/\"//g' | sed 's/,//g' | head -n 1 | tr -d '\n'"
-        existing_version_hotfix = sh returnStdout: true, script: "wget -q https://hub.docker.com/v2/repositories/splicemachine/kubernetes-ingress/tags\?page\=$page_num -O - | jq '.' | grep 'name' | grep '2\.0\.11' | sed 's/2.0.11_//' | cut -d '.' -f3 | sed 's/\"//g' | sed 's/,//g' | head -n 1 | sed 's/[^0-9]*//g' | tr -d '\n'"
+        existing_version_major = sh returnStdout: true, script: "wget -q https://hub.docker.com/v2/repositories/splicemachine/kubernetes-ingress/tags\?page\=$page_num -O - | jq '.' | grep 'name' | grep '2.0.11' | sed 's/2.0.11_//' | cut -d '.' -f1 | sed 's/\"//g' | sed 's/,//g' | head -n 1 | cut -d ' ' -f8 | tr -d '\n'"
+        existing_version_minor = sh returnStdout: true, script: "wget -q https://hub.docker.com/v2/repositories/splicemachine/kubernetes-ingress/tags\?page\=$page_num -O - | jq '.' | grep 'name' | grep '2.0.11' | sed 's/2.0.11_//' | cut -d '.' -f2 | sed 's/\"//g' | sed 's/,//g' | head -n 1 | tr -d '\n'"
+        existing_version_hotfix = sh returnStdout: true, script: "wget -q https://hub.docker.com/v2/repositories/splicemachine/kubernetes-ingress/tags\?page\=$page_num -O - | jq '.' | grep 'name' | grep '2.0.11' | sed 's/2.0.11_//' | cut -d '.' -f3 | sed 's/\"//g' | sed 's/,//g' | head -n 1 | sed 's/[^0-9]*//g' | tr -d '\n'"
         def ver_bump = 1;
         new_hotfix_version = sh returnStdout: true, script: "expr $existing_version_hotfix + $ver_bump | tr -d '\n'"
         sh "chmod +x ./build_controller.sh"
